--- a/dataMining_4_DecisionTrees.ipynb
+++ b/dataMining_4_DecisionTrees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,11 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=None,\n            max_features=None, max_leaf_nodes=None, min_samples_leaf=1,\n            min_samples_split=2, min_weight_fraction_leaf=0.0,\n            presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read in our weather data\n",
     "rawData = pandas.read_csv('data/dataWeather.txt',delimiter='\\t')\n",
@@ -56,7 +67,7 @@
     "dt = tree.DecisionTreeClassifier(criterion='entropy')\n",
     "\n",
     "# fit it to our data\n",
-    "dt.fit(data,label)\n"
+    "dt.fit(data,label)"
    ]
   },
   {
@@ -74,11 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on the tested day, the decision to Play is: No with 1.0 probability\n"
+     ]
+    }
+   ],
    "source": [
     "# test with a new day\n",
     "\n",
@@ -102,11 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'write'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-2376dcd76590>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m dot_data = tree.export_graphviz(dt,out_file=None,\n\u001b[1;32m      6\u001b[0m                                 \u001b[0mfeature_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                                 rounded=True,filled=True)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[1;31m# convert this to a picture structure\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpydotplus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph_from_dot_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdot_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Knowblesse\\Anaconda3\\lib\\site-packages\\sklearn\\tree\\export.py\u001b[0m in \u001b[0;36mexport_graphviz\u001b[0;34m(decision_tree, out_file, max_depth, feature_names, class_names, label, filled, leaves_parallel, impurity, node_ids, proportion, rotate, rounded, special_characters)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0mcolors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'bounds'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m         \u001b[0mout_file\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'digraph Tree {\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m         \u001b[1;31m# Specify node aesthetics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'write'"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "import pydotplus \n",
     "from IPython.display import Image\n",
@@ -118,7 +150,7 @@
     "# convert this to a picture structure\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)  \n",
     "# show this picture as a PNG in the browser\n",
-    "Image(graph.create_png())  "
+    "Image(graph.create_png())"
    ]
   },
   {
@@ -154,8 +186,7 @@
     "# fit it to our data\n",
     "dtSmall.fit(data,label)\n",
     "\n",
-    "print('got',np.size(np.where(dtSmall.predict(data)!=label)),'training errors for the small tree')\n",
-    "\n"
+    "print('got',np.size(np.where(dtSmall.predict(data)!=label)),'training errors for the small tree')"
    ]
   },
   {
@@ -184,7 +215,7 @@
     "dt = tree.DecisionTreeClassifier(criterion='entropy')\n",
     "\n",
     "# fit it to our data\n",
-    "dt.fit(data,label)\n"
+    "dt.fit(data,label)"
    ]
   },
   {
@@ -295,7 +326,7 @@
     "# convert this to a picture structure\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)  \n",
     "# show this picture as a PNG in the browser\n",
-    "Image(graph.create_png())  "
+    "Image(graph.create_png())"
    ]
   },
   {
@@ -348,7 +379,7 @@
     "# convert this to a picture structure\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)  \n",
     "# show this picture as a PNG in the browser\n",
-    "Image(graph.create_png()) "
+    "Image(graph.create_png())"
    ]
   },
   {
@@ -393,7 +424,7 @@
     "dtIris = \n",
     "\n",
     "# fit it to our training data\n",
-    "dtIris = "
+    "dtIris ="
    ]
   },
   {
@@ -424,7 +455,7 @@
     "# convert this to a picture structure\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)  \n",
     "# show this picture as a PNG in the browser\n",
-    "Image(graph.create_png()) "
+    "Image(graph.create_png())"
    ]
   },
   {
@@ -443,7 +474,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -455,7 +488,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -466,5 +499,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
