--- a/dataMining_4_LinearClassifiers.ipynb
+++ b/dataMining_4_LinearClassifiers.ipynb
@@ -1393,6 +1393,9 @@
     "    plt.plot(sv[i,0],sv[i,1],'ko')\n",
     "\n",
     "# plot separating hyperplane\n",
+    "# remember that w*x + b =0\n",
+    "# so, we fix an x-value, say x0, and therefore:\n",
+    "# w0*x0 + w1*y0 + b =0, then we can find y0\n",
     "x0 = np.min(X1)\n",
     "y0 = (-w[0] * x0 - b) / w[1]\n",
     "x1 = np.max(X2)\n",
