--- a/deepLearning_2.ipynb
+++ b/deepLearning_2.ipynb
@@ -338,11 +338,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "1.0\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n",
+      "5.0\n",
+      "6.0\n",
+      "7.0\n",
+      "8.0\n",
+      "9.0\n",
+      "iter 1, loss 0.1648, train error 0.0503\n",
+      "iter 2, loss 0.1273, train error 0.0399\n",
+      "iter 3, loss 0.1054, train error 0.0340\n",
+      "Duration: 178.9s\n",
+      "Test error rate: 0.0476\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time.time()\n",
     "# the algorithm uses mini-batch stochastic gradient descent\n",
